<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Título principal -->
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:gravity="center"
        android:text="@string/tvTitulo"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Versión de Android -->
    <TextView
        android:id="@+id/tvVersionAndroid"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:text="@string/tvVersionAndroid" />

    <!-- Sección Bluetooth -->
    <TextView
        android:id="@+id/tvBluetooth"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:text="@string/tvBluer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDesactivar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnDesactivar"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btnActivar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnActivar"
            android:textSize="20sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvBluetooth"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:text="Flashlight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDesactivar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Off"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btnActivar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="On"
            android:textSize="20sp"/>
    </LinearLayout>

    <!-- Sección Batería -->
    <TextView
        android:id="@+id/tvBateria"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:text="@string/tvCaptura" />

    <TextView
        android:id="@+id/tvNivel"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:text="@string/tvNivel" />

    <!-- Sección Almacenamiento -->
    <TextView
        android:id="@+id/tvAlmacenamiento"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:text="@string/tvAlmacenamiento" />

    <EditText
        android:id="@+id/etNombreArchivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/etNombreArchivo"
        android:text=""
        android:minHeight="48dp" />

    <ImageButton
        android:id="@+id/btnGuardarArchivo"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/btnGuardarArchivo"
        android:src="@android:drawable/ic_menu_save" />

</LinearLayout>